--- a/FakeMaker/MainForm.resx
+++ b/FakeMaker/MainForm.resx
@@ -148,4 +148,7 @@
         SUVORK5CYII=
 </value>
   </data>
+  <metadata name="exportFileDialog.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>116, 17</value>
+  </metadata>
 </root>
